Edited variable description

--- a/appsettings-example.json
+++ b/appsettings-example.json
@@ -4,6 +4,6 @@
     "appName": "Random Notice Bot", //App Name
     "startNotice": false, //set to true if you whant the bot to send a menssage on start
     "channels":{
-        "General": "" //18 digits channel id number
+        "General": "" //18 digits channel id number required if 'startNotice' == true
     }
 }
